--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,15 @@ body {
   outline: 0 !important;
 }
 
+.profile-img {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  object-fit: cover;
+  object-position: center;
+  overflow: hidden;
+}
+
 hr {
   box-sizing: content-box;
   height: 0;
@@ -9714,5 +9723,42 @@ h4, h5, h6 {
 .service-item:hover i {
     transform: scale(1.2);
     filter: drop-shadow(0 0 8px rgba(0, 123, 255, 0.8));
+}
+
+section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+section h2 {
+  font-family: 'Averia Serif Libre', cursive;
+  font-weight: 500;
+  margin-bottom: 20px;
+  color: #141414;
+}
+
+ul li {
+  margin-bottom: 10px;
+  line-height: 1.6;
+  font-size: 1.1rem;
+}
+
+.embed-responsive {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding: 0;
+  overflow: hidden;
+  padding-top: 56.25%;
+}
+
+.embed-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  border: 0;
 }
 
