--- a/css/style.css
+++ b/css/style.css
@@ -9762,3 +9762,23 @@ ul li {
   border: 0;
 }
 
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* יחס 16:9 */
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+
